source/themes/custom/gearwrench/styles/libraries/node/full--product-category.scss
@charset 'UTF-8';

// -----------------------------------------------------------------------------
// Libraries/Node: Full Default
// -----------------------------------------------------------------------------

/**
 * Globals
 * An import of all abstracts
 */
@import '../../globals';

/**
 * Component
 */
.node--type-product-category.node--view-mode-full .node__content {

  .page-heading {
    @include flex();
    flex-flow: row wrap;
    margin-bottom: 3rem;

    @include media('>=lg') {
      margin-bottom: 2rem;
    }

    .heading-left {
      flex: 0 0 100%;
      margin-bottom: 3rem;

      @include media('>=lg') {
        flex: 3;
        margin-bottom: 0;
        padding-right: 50px;
      }
    }

    .heading-right {
      flex: 0 0 100%;

      @include media('>=lg') {
        flex: 1;
      }
    }
  }

  .field--name-field-link {
    text-align: center;

    a {
      @include btn();
    }
  }

  .field--name-field-media {
    @include container-full-width();
    margin-bottom: 3rem;

    .media {
      height: 500px;

      picture {
        width: 100%;
        height: 100%;
        display: flex;

        img {
          object-fit: cover;
          height: auto;
          width: 100%;
        }
      }
    }
  }

  .product-category-view-section {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: rem(24px); // sass-lint:disable-line no-misspelled-properties
    grid-auto-rows: minmax(100px, auto);

    @include media('>=md') {
      grid-template-columns: repeat(3, 1fr);
    }


    .gearwrench-product-category-filters {
      display: none;
      grid-column: 1;

      &.mobile-show {
        display: flex;
        flex-direction: column;
        background-color: #FFFFFF;
        box-shadow: 0rem 0rem 3rem 5rem rgba(0, 0, 0, 0.6);
        bottom: 0;
        left: 15vw;
        overflow: scroll;
        padding-top: 75px;
        padding-left: 1rem;
        position: fixed;
        top: 0;
        right: 0;
        width: 85vw;
        z-index: 499;
    
        &.hide {
          display: none;
          z-index: -5;
        }

        .fieldgroup {
          order: 2;
          width: 85%;
        }

        .mobile-filter-header {
          border-bottom: 1px solid #000000;
          height: 3rem;
          max-width: 100%;
          order: 1;
        }

        .mobile-filter-header-inner {
          align-items: center;
          display: flex;
          height: 3rem;
          justify-content: space-between;
          padding-right: 1.5rem;        }

        .mobile-close-icon {
          height: 2rem;
          width: 2rem;

          &::before {
            font-family: "themeIcons";
            content: icon-char('close');
          }
        }

        legend {
          width: 85vw;

          .fieldset-legend {
            padding-right: 3.8rem;
            width: 100%;
          }
        }

      }

      @include media('>=md') {
        display: block;
      }

      legend {
        @include type-header(h6, black, included);
        margin-bottom: 1rem;
        padding: 1rem 0;
        position: relative;
        width: 100%;

        .fieldset-legend {
          @include icon('arrow', after, false);
          display: flex;
          position: relative;
          align-items: center;
          justify-content: space-between;

          &::after {
            transform: rotate(90deg);
          }
        }

        &:after {
          background-color: $gray-40;
          bottom: 0;
          content: '';
          height: 1px;
          left: 0;
          position: absolute;
          width: 100%;
        }
      }

      fieldset {
        margin: 0;
        padding: 0;
      }

      .form-item {
        font-size: rem(14px);
        margin-bottom: 1rem !important;
      }

      .form-checkboxes input[type='checkbox'] + label:before {
        top: -.125rem;
      }

      .form-checkboxes input[type='checkbox'] + label:after {
        top: .125rem;
      }


      .form-checkboxes input[type='checkbox']:not(:checked) + label:before {
        background-color: transparent;
      }
    }

    .views-element-container {
      grid-column: 1 / 4;

      @include media('>=md') {
        grid-column: 2 / 4;
      }

      .view-filters {
        display: none;
        visibility: hidden;
      }

    }

    .view-product-category {

      .view-header {
        @include type-header(h6, black, included);
        @include flex();
        @include flex-x(justify-content, space-between);

        margin: 0;
        padding: 1rem 0;

        .sort-icon {
          @include icon('sort', after);
        }

        @include media('>=md') {
          .sort-icon {
            visibility: hidden;
          }
        }
        
      }

      .view-content {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: rem(25px); // sass-lint:disable-line no-misspelled-properties

        @include media('>=sm') {
          grid-template-columns: repeat(3, 1fr);
        }

        @include media('>=md') {
          grid-template-columns: repeat(2, 1fr);
        }

        @include media('>=lg') {
          grid-template-columns: repeat(3, 1fr);
        }

        .views-row {
          .node--view-mode-teaser {
            width: 100%;
          }
        }
      }
    }
  }
}

